--- a/style.css
+++ b/style.css
@@ -81,3 +81,30 @@ main {
 .buton:active {
      background-color: rgb(58, 58, 58);
 }
+
+@media  screen and (max-width: 480px) {
+
+    main {
+    flex-direction: column;
+}
+
+
+    .click-section {
+    padding-bottom: 5vh;
+    background-color: rgb(90, 90, 90);
+    height: 40%;
+    width: 100%;
+}
+
+.upgrade-section {
+    background-color: rgb(35, 35, 35);
+    height: 100vh;
+    width: 100%;
+}
+
+.contu {
+    display: flex;
+    flex-direction: column;
+}
+    
+}
