--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     font-family: "Oswald", sans-serif;
     margin: 0;
     padding: 0;
+    min-height: 100vh;
 }
 
 main {
@@ -17,13 +18,13 @@ h2 {
 .click-section {
     background-color: rgb(90, 90, 90);
     width: 40%;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .upgrade-section {
     background-color: rgb(35, 35, 35);
     width: 60%;
-    height: 100%;
+   min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -43,6 +44,9 @@ h2 {
     border-radius: 1000px;
     width: 200px;
     height: 200px;
+    font-size: 40px;
+     font-family: "Oswald", sans-serif;
+     font-weight: 900;
 }
 
 .main-button:hover {
